fix overflow always showing

--- a/src/SketchBoard/styles.css
+++ b/src/SketchBoard/styles.css
@@ -29,6 +29,7 @@ html {
   width: 100%;
   height: 100%;
   background-color: #ffffff;
+  overflow-x: hidden !important;
 }
 
 .bottom {
